# asset-manager

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run_gui.bat  run_gui.sh  run_server.bat
.github/workflows/: ci.yml
.superpowers/brainstorm/482-1775347655/content/: pipeline-approaches.html  topology-diagrams.html
.superpowers/brainstorm/482-1775347655/state/: server-stopped
.superpowers/brainstorm/808-1775303754/state/: server-stopped
.superpowers/brainstorm/991-1775305572/content/: architecture-approaches.html  combat-system.html  generator-changes.html  layer-system.html  viewer-architecture.html
.superpowers/brainstorm/991-1775305572/state/: server-stopped
asset_manager/: __init__.py  shared_state.py
asset_manager/bridge/: schemas.py  server.py
asset_manager/cli/: bake.py  bulk_import.py  curate_lora_dataset.py  extract_packs.py  inventory_packs.py  regen_licenses.py  register_3d_model.py  sample_recipe.yaml  ship_export_check.py  watch_move.py
asset_manager/cli/npc_pipeline/: __init__.py  _import_state.json  blender_process.py  import_npcs.py  run_import.bat
asset_manager/exporters/: unity_csharp.py  unity_scene.py  unity_terrain.py  unity_tilemap.py
asset_manager/gateway/: base.py  nano_banana.py  scenario.py  stable_diffusion.py  tripo3d.py
asset_manager/generators/: _perlin.py  blender_renderer.py  local_sd.py  manifest_builder.py  procedural_sprite.py  sprite_manager.py  texture.py
asset_manager/generators/pcg/: asset_agent.py  base_agent.py  cave_carver_agent.py  connector_agent.py  dag_engine.py  dressing_agent.py  encounter_agent.py  labeling_agent.py  loot_agent.py  map_generator.py  orchestrator.py  pathfinding_agent.py  planner.py  renderer_agent.py  room_purpose_agent.py  spawn_agent.py  structure_agent.py  terrain_agent.py  test_all_types.py  topology_agent.py  trap_agent.py  water_agent.py
asset_manager/generators/pcg/data/: room_graph.py
asset_manager/generators/pcg/pipeline/: coordinator.py  generation_request.py  profiles.py  (+1 more)
asset_manager/pipeline/: __init__.py  lora_trainer.py  source_decision.py  style_audit.py
asset_manager/selectors/: rules.py  selector.py
asset_manager/validators/: quality_metrics.py  validator.py
asset_manager/validators/border_detect/: __init__.py  ensemble.py
docs/superpowers/plans/: 2026-04-04-generation-overhaul-phase1.md  2026-04-04-generation-overhaul-phase2.md  2026-04-04-generation-overhaul-phase3.md  2026-04-04-layered-renderer-playtest-viewer.md
docs/superpowers/specs/: 2026-04-04-generation-overhaul-design.md  2026-04-04-layered-renderer-playtest-viewer-design.md
mapgen_agents/: __init__.py  cli.py  demo.py  gui.py  launcher.py  llm_adapter.py  map_generator.py  orchestrator.py  planner.py  shared_state.py
mapgen_agents/agents/: __init__.py  asset_agent.py  connector_agent.py  dressing_agent.py  encounter_agent.py  labeling_agent.py  loot_agent.py  pathfinding_agent.py  renderer_agent.py  room_purpose_agent.py  spawn_agent.py  sprite_manager.py  structure_agent.py  terrain_agent.py  topology_agent.py  trap_agent.py  unity_csharp_exporter.py  unity_scene_exporter.py  unity_terrain_exporter.py  unity_tilemap_exporter.py
mapgen_agents/data/: __init__.py  game_tables.py  room_purposes.py
mapgen_agents/pipeline/: __init__.py  coordinator.py  generation_request.py  profiles.py  validation.py
mapgen_agents/viewer/: ai.py  camera.py  combat.py  config.py  entities.py  fog_of_war.py  game_engine.py  main.py  map_loader.py  renderer.py  ui_overlay.py
tests/: conftest.py  test_asset_endpoints_smoke.py  test_bake_cli.py  test_blender_renderer.py  test_bridge.py  test_bridge_inspection_endpoints.py  test_bulk_import.py  test_catalog_and_selector.py  test_cave_carver.py  test_combat.py  test_connector_agent.py  test_curate_lora_dataset.py  test_encounter_agent.py  test_extract_packs.py  test_game_tables.py  test_gateway_unavailable.py  test_gateways.py  test_generation_request.py  test_generators_manifest.py  test_generators_sprite.py  test_generators_texture.py  test_html_index.py  test_html_index_thumbs.py  test_imports.py  test_local_sd.py  test_loot_agent.py  test_lora_trainer.py  test_manifest_migration.py  test_pack_importer.py  test_pipeline_coordinator.py  test_regen_licenses.py  test_room_graph.py  test_room_purpose_agent.py  test_room_purposes.py  test_schema_drift.py  test_ship_export_check.py  test_source_decision.py  test_style_audit.py  test_style_bible.py  test_terrain_enhanced.py  (+5 more)
tests/legacy/: README.md  test_dressing_agent.py  test_pathfinding_enhanced.py  test_phase2_integration.py  test_phase3_integration.py  test_profiles.py  test_spawn_agent.py  test_structure_enhanced.py  test_trap_agent.py  test_zlevel.py
(+1 files in other folders)
