[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asset_manager"
version = "0.1.0"
description = "Asset library, selector, generator, and AI gateway for the Forever engine RPG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "numpy>=1.26",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
pcg = [
    "noise>=1.2",
    "scipy>=1.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["asset_manager*"]
exclude = ["tests*", "_archive*", "mapgen_agents*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
