[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asset_manager"
version = "0.1.0"
description = "Asset library, selector, generator, and AI gateway for the Forever engine RPG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5",
    "numpy>=1.26",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
]
pcg = [
    "noise>=1.2",
    "scipy>=1.11",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["asset_manager*"]
exclude = ["tests*", "_archive*", "mapgen_agents*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    "_archive",
    ".venv",
    "build",
    "dist",
    "asset_manager/generators/pcg",  # legacy mapgen agents — not maintained to current standards
    "asset_manager/exporters",       # legacy unity exporters — same
    "asset_manager/validators/border_detect",  # salvaged from Gut It Out — keep as-is
    "tests/legacy",                  # quarantined pre-pivot tests
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long — already enforced by line-length
    "B008",  # function call in default arg — needed for FastAPI Depends-style patterns
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401"]
